<resources>
    <string name="app_name">Festa</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_festa">Festa</string>
    <string name="home">Home</string>
    <string name="empty" />
    <string name="festa">FESTA</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_event">Create Event</string>
    <string name="lorem">  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="title_activity_main">Festa</string>

    <string name="title_activity_map_box">Live</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_generate">Generate</string>
    <string name="title_activity_auth">Auth</string>
    <string name="bringing_events_ncloser_to_you">BRINGING EVENTS\nCLOSER TO YOU</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="forgotten_password_click_here">Forgotten password? Click here</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string-array name="categories_main">
        <item>Trending</item>
        <item>Music</item>
        <item>Sports</item>
        <item>Movies &amp; Shows</item>
        <item>Festivals</item>
        <item>More</item>
    </string-array>
    <string name="title_activity_event_details">Event Details</string>
</resources>
