<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Auth">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.github.florent37.arclayout.ArcLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            app:arc_height="35dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bg" />


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@string/app_name"
                        android:src="@mipmap/festa_icon_2" />

                    <TextView
                        android:layout_marginTop="@dimen/fab_margin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/google_sans_regular"
                        android:text="@string/bringing_events_ncloser_to_you"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:fontFamily="@font/lato"
                        android:layout_width="156dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="32dp"
                        android:background="@drawable/toast_stroke"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/sign_up"
                        android:textColor="@color/grey_0" />

                </androidx.appcompat.widget.LinearLayoutCompat>


            </RelativeLayout>
        </com.github.florent37.arclayout.ArcLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:padding="16dp">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_marginTop="@dimen/fab_margin"
                android:padding="12dp"
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="16dp"
                android:background="@drawable/toast_white"
                android:drawableStart="@drawable/ic_mail"
                android:hint="@string/email"
                android:inputType="text"
                android:textColor="@color/colorBlack"
                android:textSize="15sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:layout_marginTop="12dp"
                android:padding="12dp"
                android:background="@drawable/toast_white"
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_locked"
                android:drawablePadding="4dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/colorBlack"
                android:textSize="15sp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="22dp"
                android:orientation="vertical"
                android:padding="@dimen/fab_margin">

                <TextView
                    android:id="@+id/login_btn"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/toast_accent"
                    android:gravity="center"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/login"
                    android:textColor="@color/colorWhite" />


                <TextView
                    android:id="@+id/forgotten_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:text="@string/forgotten_password_click_here"
                    android:textColor="@color/colorShade"
                    android:textSize="13sp"
                    android:textStyle="italic" />

            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>